Fix Clippy Warnings, Update Dependencies, and Reduce Binary Size
- Fix Clippy warnings
- Resolve a style issue
- Update dependencies
- Remove unnecessary crate features and enable more aggressive optimizations to significantly reduce binary size

--- a/tailwind/base.css
+++ b/tailwind/base.css
@@ -238,7 +238,7 @@
 }
 
 .markdown-body blockquote {
-    @apply border-l-4 border-gray-300 pl-4 italic text-gray-600 mb-4;
+    @apply border-l-4 border-gray-300 pl-4 italic text-gray-600 dark:text-slate-200 mb-4;
 }
 
 .markdown-body table {
